feat: get appointment by id
