# src/docs/admin-swagger.yml
@@ -124,6 +124,23 @@ paths:
           $ref: '#/components/responses/InternalError'
 
   /scheduler/appointments/{id}:
+    get:
+      tags:
+        - scheduler
+      summary: Get appointment by id
+      parameters:
+        - $ref: '#components/parameters/pathId'
+      responses:
+        200:
+          description: Ok
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Appointment'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/InternalError'
     put:
       tags:
         - scheduler
@@ -146,7 +163,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Appointment'
-
         400:
           $ref: '#/components/responses/BadRequest'
         500:
